--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
     display: flex;
     padding: 60px 0;
     width: 80%;
-    
     max-height: 36rem;
     margin: auto;
     overflow: hidden;
@@ -120,15 +119,74 @@ nav a:hover{
     width: 100%;
 } */
 
-
+.sobre-presentacion1{
+    text-align: center;
+    display: inline-block;
+    width: 50%;
+    height: 200px;
+    position: absolute;
+    margin-top: -400px;
+    margin-left: 0%;
+}
+.sobre-presentacion2{
+    text-align: center;
+    display: inline-block;
+    width: 50%;
+    height: 200px;
+    position: absolute;
+    margin-top: -400px;
+    margin-left: 50%;
+}
+.sobre-presentacion3{
+    text-align: center;
+    display: inline-block;
+    width: 50%;
+    height: 200px;
+    position: absolute;
+    margin-top: -150px;
+    margin-left: 25%;
+}
+.sobre-presentacion1 p{
+    color:#ffffff;
+    font-family: 'Zilla Slab Highlight', cursive;
+    font-size: 400%;
+    font-weight: 600;
+}
+.sobre-presentacion2 p{
+    color:#000000;
+    font-family: 'Zilla Slab Highlight', cursive;
+    font-size: 400%;
+    font-weight: 600;
+}
+.sobre-presentacion2 p{
+    color:#000000;
+    font-family: 'Zilla Slab Highlight', cursive;
+    font-size: 400%;
+    font-weight: 600;
+}
+.sobre-presentacion3 p{
+    color:#000000;
+    font-family: 'Zilla Slab Highlight', cursive;
+    font-size: 400%;
+    font-weight: 600;
+}
 .img-presentacion{
     display: flex;
     justify-content:space-around;
 }
 .img-pre1{
+    position: static;
     width: 50%;
+    height: 880px;
+    object-fit: cover;
     margin-top: -10px;
-    opacity: 0.8238; /* opacity: 0.8282; */
+    opacity: 0.92; 
+    filter: blur(2px);
+    -webkit-filter: blur(2px);
+}
+
+.sobre-presentacion3 u:hover{
+    cursor: pointer
 }
 
 
